add angular-calculator to public/lib

--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -28,9 +28,9 @@
                       row="widget.row"
                       col="widget.col"
                       type="widget.type">
-        <div ng-switch="widget.type">
+        <div ng-switch="widget.type" >
           <div ng-switch-when="link-widget" render-widget type="link-widget"></div>
-          <div ng-switch-when="clock-widget" clock-widget type="clock-widget"></div>
+          <div ng-switch-when="clock-widget" render-widget type="clock-widget"></div>
         </div>
       </div>
     </li>
