load angular-calculator from main page script tag

--- a/app_client/index.html
+++ b/app_client/index.html
@@ -24,6 +24,7 @@
     <script src="lib/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
     <script src="lib/ng-infinite-scroll/ng-infinite-scroll.min.js"></script>
     <script src="lib/angular-ui-clock/dist/angular-clock.js"></script>
+    <script src="lib/angular-calculator/dist/angular-calculator.min.js"></script>
     <script src="app.min.js"></script>
   </body>
 
