--- a/app_client/index.html
+++ b/app_client/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/lib/angular-ui-bootstrap/dist/ui-bootstrap-csp.css">
     <link rel="stylesheet" href="/lib/angular-gridster/dist/angular-gridster.css">
     <link rel="stylesheet" href="/lib/angular-ui-clock/dist/angular-clock.css">
+    <link rel="stylesheet" href="/lib/ng-calc/ng-calc.css">
     <link rel="stylesheet" href="/dashboard/dashboard.style.css">
   </head>
 
@@ -24,6 +25,7 @@
     <script src="lib/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
     <script src="lib/ng-infinite-scroll/ng-infinite-scroll.min.js"></script>
     <script src="lib/angular-ui-clock/dist/angular-clock.js"></script>
+    <script src="lib/ng-calc/ng-calc.js"></script>
     <script src="app.min.js"></script>
   </body>
 
