--- a/app_client/index.html
+++ b/app_client/index.html
@@ -5,12 +5,13 @@
   <head>
     <title>NerveCenter</title>
     <base href="/">
-    <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="/lib/angular-ui-bootstrap/dist/ui-bootstrap-csp.css">
-    <link rel="stylesheet" href="/lib/angular-gridster/dist/angular-gridster.css">
-    <link rel="stylesheet" href="/lib/angular-ui-clock/dist/angular-clock.css">
-    <link rel="stylesheet" href="/dashboard/dashboard.style.css">
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="lib/angular-ui-bootstrap/dist/ui-bootstrap-csp.css">
+    <link rel="stylesheet" href="lib/angular-gridster/dist/angular-gridster.css">
+    <link rel="stylesheet" href="lib/angular-ui-clock/dist/angular-clock.css">
+    <link rel="stylesheet" href="lib/angular-ui-clock/dist/angular-clock.css">
+    <link rel="stylesheet" href="dashboard/dashboard.style.css">
   </head>
 
   <body ng-view>
