--- a/app_client/dashboard/nc-calc/nc-calc.template.html
+++ b/app_client/dashboard/nc-calc/nc-calc.template.html
@@ -1,30 +1,14 @@
-<div class="calculator">
+<div  class="calculator">
   <div class="u4 display">
     <div class="display-inner">{{out}}</div>
   </div>
-
-  <div>
-    <div gridster="calcGridOptions">
-      <ul>
-        <li>
-          <gridster-item class="calc-key"
-                         ng-repeat="calcKey in allCalcKeys"
-                         ng-class="{ 'digit-key': calcKey.type === 'digitKey',
-                                     'operator-key': calcKey.type === 'operatorKey',
-                                     'special-key': calcKey.type === 'specialKey' }"
-                         ng-click="display(calcKey.key)">
-                         <!-- ng-class="{ digitkey: true }"> -->
-            <!-- ng-click="display(calkey)"> -->
-            {{calcKey.key}} 
-          </gridster-item>
-        </li>
-        <!-- <div ng-if="calkey!=\'<-\'">{{calkey}}</div> -->
-        <!-- <div ng-if="calkey==\'<-\'">B</div> -->
-      </ul>
-    </div>
-  <img id="x-delete" ng-show="deleteEnabled" 
-                     ng-click="deleteWidget(widget)"
-                     src="img/_xDelete.png"
-                     height="30px" width="30px">
-  </div>
+  <button ng-repeat="calkey in mykeys track by $index"
+          ng-click="display(calkey)" 
+          ng-class="{\'u2\': calkey == \'0\' || calkey == \'<-\',
+                    \'button-blue\' : calkey == \'=\' ,
+                    \'button-red\' : calkey == \'c\' }"
+          class="u1 button button-gray" >
+          <div ng-if="calkey!=\'<-\'">{{calkey}}</div>
+          <div ng-if="calkey==\'<-\'">B</div>
+  </button>
 </div>
