make dashboard render with nc-calc module

--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -20,20 +20,19 @@
                                        width="{{toolIconSize}}">
     </ng-click>
 </div>
-
 <div id="grid-container" gridster="gridOptions">
   <ul>
     <li>
       <div gridster-item ng-model="widget" ng-repeat="widget in widgets"
                                            row="widget.row"
                                            col="widget.col"
-                                           size-x="widget.sizeX"
+                                           size-x=widget.sizeX
                                            size-y="widget.sizeY"
                                            type="widget.type">
         <div ng-switch="widget.type">
           <div ng-switch-when="link-widget" render-widget type="link-widget"></div>
           <div ng-switch-when="clock-widget" render-widget type="clock-widget"></div>
-          <div ng-switch-when="nc-calc-widget" render-widget type="nc-calc-widget"></div>
+          <div ng-switch-when="ng-calc-widget" render-widget type="ng-calc-widget"></div>
         </div>
       </div>
     </li>
