add browser-sync dependency to gulpfile

--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -27,7 +27,7 @@
       <div gridster-item ng-model="widget" ng-repeat="widget in widgets"
                                            row="widget.row"
                                            col="widget.col"
-                                           size-x=widget.sizeX
+                                           size-x="widget.sizeX"
                                            size-y="widget.sizeY"
                                            type="widget.type">
         <div ng-switch="widget.type">
