--- a/app_client/dashboard/nc-calc/nc-calc.template.html
+++ b/app_client/dashboard/nc-calc/nc-calc.template.html
@@ -3,16 +3,18 @@
     <div class="display-inner">{{out}}</div>
   </div>
 
-  <div gridster="calcGridOptions"style="margin-top:28px">
-    <ul>
-      <li>
-        <button gridster-item ng-model="calkey" class="calkey" ng-repeat="calkey in mykeys track by $index" size-x="calkey.sizeX">
-                          <!-- ng-click="display(calkey)"> -->
-          {{calkey.key}} 
-        </button>
+  <div style="margin-top:28px">
+    <div gridster="calcGridOptions">
+      <ul>
+        <li>
+          <button gridster-item ng-model="calkey" class="cal-key" ng-repeat="calkey in mykeys track by $index" size-x="calkey.sizeX">
+            <!-- ng-click="display(calkey)"> -->
+            {{calkey.key}} 
+          </button>
         </li>
         <!-- <div ng-if="calkey!=\'<-\'">{{calkey}}</div> -->
         <!-- <div ng-if="calkey==\'<-\'">B</div> -->
-    </ul>
+      </ul>
+    </div>
   </div>
 </div>
