--- a/app_client/dashboard/nc-calc/nc-calc.template.html
+++ b/app_client/dashboard/nc-calc/nc-calc.template.html
@@ -7,7 +7,7 @@
     <div gridster="calcGridOptions">
       <ul>
         <li>
-          <button gridster-item ng-model="calkey" class="cal-key" ng-repeat="calkey in mykeys track by $index" size-x="calkey.sizeX">
+          <button gridster-item ng-model="calkey" class="calkey" ng-repeat="calkey in mykeys track by $index" size-x="calkey.sizeX">
             <!-- ng-click="display(calkey)"> -->
             {{calkey.key}} 
           </button>
