remove pre-existing button styling from nc-calc.css

--- a/app_client/dashboard/nc-calc/nc-calc.template.html
+++ b/app_client/dashboard/nc-calc/nc-calc.template.html
@@ -3,7 +3,7 @@
     <div class="display-inner">{{out}}</div>
   </div>
 
-  <div style="margin-top:28px">
+  <div style="position:relative">
     <div gridster="calcGridOptions">
       <ul>
         <li>
