further refactor nc-calc.css

--- a/app_client/dashboard/nc-calc/nc-calc.template.html
+++ b/app_client/dashboard/nc-calc/nc-calc.template.html
@@ -3,7 +3,7 @@
     <div class="display-inner">{{out}}</div>
   </div>
 
-  <div style="position:relative">
+  <div>
     <div gridster="calcGridOptions">
       <ul>
         <li>
