add ng-class to style digitKeys

--- a/app_client/dashboard/nc-calc/nc-calc.template.html
+++ b/app_client/dashboard/nc-calc/nc-calc.template.html
@@ -9,7 +9,8 @@
         <li>
           <gridster-item class="calc-key"
                          ng-repeat="calcKey in allCalcKeys"
-                         ng-class="{ digit-key: calcKey.type === 'digitKey' }">
+                         ng-class="{ 'digit-key': calcKey.type === 'digitKey' }">
+                         <!-- ng-class="{ digitkey: true }"> -->
             <!-- ng-click="display(calkey)"> -->
             {{calcKey.key}} 
           </gridster-item>
