fix display by always resetting to 0

--- a/app_client/dashboard/nc-calc/nc-calc.template.html
+++ b/app_client/dashboard/nc-calc/nc-calc.template.html
@@ -11,7 +11,8 @@
                          ng-repeat="calcKey in allCalcKeys"
                          ng-class="{ 'digit-key': calcKey.type === 'digitKey',
                                      'operator-key': calcKey.type === 'operatorKey',
-                                     'special-key': calcKey.type === 'specialKey' }">
+                                     'special-key': calcKey.type === 'specialKey' }"
+                         ng-click="display(calcKey.key)">
                          <!-- ng-class="{ digitkey: true }"> -->
             <!-- ng-click="display(calkey)"> -->
             {{calcKey.key}} 
