add babel support to gulp file

--- a/app_client/dashboard/nc-calc/nc-calc.template.html
+++ b/app_client/dashboard/nc-calc/nc-calc.template.html
@@ -22,5 +22,9 @@
         <!-- <div ng-if="calkey==\'<-\'">B</div> -->
       </ul>
     </div>
+  <img id="x-delete" ng-show="deleteEnabled" 
+                     ng-click="deleteWidget(widget)"
+                     src="img/_xDelete.png"
+                     height="30px" width="30px">
   </div>
 </div>
