--- a/app_client/index.html
+++ b/app_client/index.html
@@ -5,13 +5,13 @@
   <head>
     <title>NerveCenter</title>
     <base href="/">
-    <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="/lib/angular-ui-bootstrap/dist/ui-bootstrap-csp.css">
-    <link rel="stylesheet" href="/lib/angular-gridster/dist/angular-gridster.css">
-    <link rel="stylesheet" href="/lib/angular-ui-clock/dist/angular-clock.css">
-    <link rel="stylesheet" href="/lib/ng-calc/ng-calc.css">
-    <link rel="stylesheet" href="/dashboard/dashboard.style.css">
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="lib/angular-ui-bootstrap/dist/ui-bootstrap-csp.css">
+    <link rel="stylesheet" href="lib/angular-gridster/dist/angular-gridster.css">
+    <link rel="stylesheet" href="lib/angular-ui-clock/dist/angular-clock.css">
+    <link rel="stylesheet" href="lib/ng-calc/ng-calc.css">
+    <link rel="stylesheet" href="dashboard/dashboard.style.css">
   </head>
 
   <body ng-view>
@@ -26,7 +26,7 @@
     <script src="lib/ng-infinite-scroll/ng-infinite-scroll.min.js"></script>
     <script src="lib/angular-ui-clock/dist/angular-clock.js"></script>
     <!-- <script src="lib/ng-calc/ng-calc.js"></script> -->
-    <script src="app.min.js"></script>
+    <script src="dist/app.min.js"></script>
   </body>
 
 </html>
